--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>FutScore</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="container">
+                <div class="logo">
+                    <a href="/">FutScore</a>
+                </div>
+                <div class="buttons">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Campeonatos</a></li>
+                        <li><a href="#">Calendário</a></li>
+                        <li><a href="#">Perfil</a></li>
+                        <li><a href="#">Login</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
