--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
     <title>FutScore</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -27,5 +33,74 @@
             </div>
         </nav>
     </header>
+    <div class="container">
+        <div class="row m-0 gy-5 align-items-center">
+            <div class="col-sm-12 col-md-6">
+                <div class="card text-center">
+                    <div class="card-header">
+                        <h5>Título do Primeiro Quadrado</h5>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 1">
+                        <span class="mx-2">Time 1</span>
+                        <span class="badge badge-primary">2</span>
+                        <span class="badge badge-secondary">x</span>
+                        <span class="badge badge-danger">1</span>
+                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 2">
+                        <span class="mx-2">Time 2</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <div class="card text-center">
+                    <div class="card-header">
+                        <h5>Título do Segundo Quadrado</h5>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 3">
+                        <span class="mx-2">Time 3</span>
+                        <span class="badge badge-primary">3</span>
+                        <span class="badge badge-secondary">x</span>
+                        <span class="badge badge-danger">2</span>
+                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 4">
+                        <span class="mx-2">Time 4</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6">
+                <div class="card text-center">
+                    <div class="card-header">
+                        <h5>Título do Terceiro Quadrado</h5>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 1">
+                        <span class="mx-2">Time 1</span>
+                        <span class="badge badge-primary">2</span>
+                        <span class="badge badge-secondary">x</span>
+                        <span class="badge badge-danger">1</span>
+                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 2">
+                        <span class="mx-2">Time 2</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <div class="card text-center">
+                    <div class="card-header">
+                        <h5>Título do Quarto Quadrado</h5>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 3">
+                        <span class="mx-2">Time 3</span>
+                        <span class="badge badge-primary">3</span>
+                        <span class="badge badge-secondary">x</span>
+                        <span class="badge badge-danger">2</span>
+                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 4">
+                        <span class="mx-2">Time 4</span>
+                    </div>
+                </div>
+            </div>
+
 </body>
+
 </html>
