Placares ao vivo

--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -64,13 +64,11 @@
                         <h5>Título do Primeiro Quadrado</h5>
                     </div>
                     <div class="card-body">
+                        <span class="mx-2">Flamengo</span>
                         <img src="https://via.placeholder.com/50" alt="Escudo do Time 1">
-                        <span class="mx-2">Time 1</span>
-                        <span class="badge badge-primary">2</span>
-                        <span class="badge badge-secondary">x</span>
-                        <span class="badge badge-danger">1</span>
+                        <span class="placar">1 - 4</span>
                         <img src="https://via.placeholder.com/50" alt="Escudo do Time 2">
-                        <span class="mx-2">Time 2</span>
+                        <span class="mx-2">Cruzeiro</span>
                     </div>
                 </div>
             </div>
