--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -39,20 +39,20 @@
             <h5>Brasileirão Série A</h5>
         </div>
         <div>
-            <p><img src="Campeonato_Brasileiro_Série_B_logo.png" alt=""></p>
+            <p><img src="/src/img/Campeonato_Brasileiro_Série_B.png" alt="Campeonato_Brasileiro_Série_B"></p>
             <h5>Serie B</h5>
         </div>
         <div>
-            <p><img src="logo-conmebol-sul-americana-512-removebg-preview.png" alt=""></p>
+            <p><img src="/src/img/conmebol-sul-americana.png" alt="conmebol-sul-americana"></p>
             <h5>Sul Americana</h5>
             
         </div>
         <div>
-            <p><img src="copa-do-brasil-logo-1.png" alt=""></p>
+            <p><img src="/src/img/copa-do-brasil.png" alt="copa do brasil"></p>
             <h5>Copa do Brasil</h5>
         </div>
         <div>
-            <p><img src="libert-removebg-preview.png" alt="">  </p>
+            <p><img src="/src/img/libert.png" alt="Libertadores">  </p>
             <h5>Libertadores</h5>
         </div>
     </div>
