--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -19,11 +19,11 @@
         <nav>
             <div class="container">
                 <div class="logo">
-                    <a href="/">FutScore</a>
+                    <a href="/src/homepage/index.html">FutScore</a>
                 </div>
                 <div class="buttons">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="/src/homepage/index.html">Home</a></li>
                         <li><a href="#">Campeonatos</a></li>
                         <li><a href="#">Calendário</a></li>
                         <li><a href="#">Perfil</a></li>
