--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -34,44 +34,42 @@
         </nav>
     </header>
     <div class="container"> 
-        <h4>Campeonatos</h4>
+        <h2>Campeonatos</h2>
         <div class="campeonatos">
-            
             <div>
                 <img src="/src/img/brasileirao.png" alt="brasileirao">
                 <h5>Brasileirão Série A</h5>
             </div>
             <div>
-                <p><img src="/src/img/Campeonato_Brasileiro_Série_B.png" alt="Campeonato_Brasileiro_Série_B"></p>
-                <h5>Serie B</h5>
+                <img src="/src/img/Campeonato_Brasileiro_Série_B.png" alt="Série_B">
+                <h5>Série B</h5>
             </div>
             <div>
-                <p><img src="/src/img/conmebol-sul-americana.png" alt="conmebol-sul-americana"></p>
+                <img src="/src/img/conmebol-sul-americana.png" alt="conmebol-sul-americana">
                 <h5>Sul Americana</h5>
                 
             </div>
             <div>
-                <p><img src="/src/img/copa-do-brasil.png" alt="copa do brasil"></p>
+                <img src="/src/img/copa-do-brasil.png" alt="copa do brasil">
                 <h5>Copa do Brasil</h5>
             </div>
             <div>
-                <p><img src="/src/img/libert.png" alt="Libertadores">  </p>
+                <img src="/src/img/libert.png" alt="Libertadores">
                 <h5>Libertadores</h5>
             </div>
         </div> 
-    </div>
-    <div class="container">
+        <h2>Ao Vivo</h2>
         <div class="row m-0 gy-5 align-items-center">
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Título do Primeiro Quadrado</h5>
+                        <h5>Brasileirão Série A</h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Flamengo</span>
-                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 1">
+                        <img class="escudos" src="/src/img/flamengo.png" alt="Flamengo">
                         <span class="placar">1 - 4</span>
-                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 2">
+                        <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
                         <span class="mx-2">Cruzeiro</span>
                     </div>
                 </div>
@@ -125,6 +123,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
 </body>
 
