--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -80,13 +80,11 @@
                         <h5>Título do Segundo Quadrado</h5>
                     </div>
                     <div class="card-body">
-                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 3">
-                        <span class="mx-2">Time 3</span>
-                        <span class="badge badge-primary">3</span>
-                        <span class="badge badge-secondary">x</span>
-                        <span class="badge badge-danger">2</span>
-                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 4">
-                        <span class="mx-2">Time 4</span>
+                        <span class="mx-2">Corinthians</span>
+                        <img class="escudos" src="/src/img/Corinthians.png" alt="Corinthians">
+                        <span class="placar">3 - 0</span>
+                        <img class="escudos" src="/src/img/Atletico Mineiro.png" alt="Atlético-MG"
+                        <span class="mx-2">Atlético-MG</span>
                     </div>
                 </div>
             </div>
@@ -94,32 +92,28 @@
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Título do Terceiro Quadrado</h5>
+                        <h5>Libertadores</h5>
                     </div>
                     <div class="card-body">
-                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 1">
-                        <span class="mx-2">Time 1</span>
-                        <span class="badge badge-primary">2</span>
-                        <span class="badge badge-secondary">x</span>
-                        <span class="badge badge-danger">1</span>
-                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 2">
-                        <span class="mx-2">Time 2</span>
+                        <span class="mx-2">Fluminense</span>
+                        <img class="escudos" src="/src/img/Fluminense.png" alt="Fluminense">
+                        <span class="placar">3 - 0</span>
+                        <img class="escudos" src="/src/img/River Plate.png" alt="River Plate">
+                        <span class="mx-2">River Plate</span>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Título do Quarto Quadrado</h5>
+                        <h5>Sul Americana</h5>
                     </div>
                     <div class="card-body">
-                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 3">
-                        <span class="mx-2">Time 3</span>
-                        <span class="badge badge-primary">3</span>
-                        <span class="badge badge-secondary">x</span>
-                        <span class="badge badge-danger">2</span>
-                        <img src="https://via.placeholder.com/50" alt="Escudo do Time 4">
-                        <span class="mx-2">Time 4</span>
+                        <span class="mx-2">Fortaleza</span>
+                        <img class="escudos" src="/src/img/Fortaleza.png" alt="Fortaleza">
+                        <span class="placar">3 - 3</span>
+                        <img class="escudos" src="/src/img/San Lorenzo.png" alt="San Lorenzo">
+                        <span class="mx-2">San Lorenzo</span>
                     </div>
                 </div>
             </div>
