--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -77,7 +77,7 @@
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Título do Segundo Quadrado</h5>
+                        <h5>Copa do Brasil</h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Corinthians</span>
