--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                         <span class="mx-2">Corinthians</span>
                         <img class="escudos" src="/src/img/Corinthians.png" alt="Corinthians">
                         <span class="placar">3 - 0</span>
-                        <img class="escudos" src="/src/img/Atletico Mineiro.png" alt="Atlético-MG"
+                        <img class="escudos" src="/src/img/Atletico Mineiro.png" alt="Atlético-MG">
                         <span class="mx-2">Atlético-MG</span>
                     </div>
                 </div>
