--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
         <nav>
             <div class="container">
                 <div class="logo">
-                    <a href="/src/homepage/index.html">FutScore</a>
+                    <a href="/src/index.html">FutScore</a>
                 </div>
                 <div class="buttons">
                     <ul>
-                        <li><a href="/src/homepage/index.html">Home</a></li>
-                        <li><a href="#">Campeonatos</a></li>
+                        <li><a href="/src/index.html">Home</a></li>
+                        <li><a href="/src/tabelas.html">Campeonatos</a></li>
                         <li><a href="#">Calendário</a></li>
                         <li><a href="#">Perfil</a></li>
                         <li><a href="#">Login</a></li>
