--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                 <div class="buttons">
                     <ul>
                         <li><a href="/src/index.html">Home</a></li>
-                        <li><a href="/src/tabelas.html">Campeonatos</a></li>
+                        <li><a href="/src/tabelaSerieA.html">Campeonatos</a></li>
                         <li><a href="#">Calendário</a></li>
                         <li><a href="#">Perfil</a></li>
                         <li><a href="#">Login</a></li>
