--- a/src/Calendario.html
+++ b/src/Calendario.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li><a href="/src/index.html">Home</a></li>
                         <li><a href="/src/tabelaSerieA.html">Campeonatos</a></li>
-                        <li><a href="#">Calendário</a></li>
+                        <li><a href="/src/Calendario.html">Calendário</a></li>
                         <li><a href="#">Perfil</a></li>
                         <li><a href="#">Login</a></li>
                     </ul>
@@ -35,19 +35,19 @@
     </header>
     
     <div class="text-center">
-            <h2>Ao Vivo</h2> 
+            <h2>Jogos de hoje</h2> 
     </div>
     <div class="container">
         <div class="row m-0 gy-5 align-items-center">
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Brasileirão Série A</h5>
+                        <h5>Brasileirão Série A 18:00</h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Flamengo</span>
                         <img class="escudos" src="/src/img/flamengo.png" alt="Flamengo">
-                        <span class="placar">1 - 4</span>
+                        <span class="placar">     X    </span>
                         <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
                         <span class="mx-2">Cruzeiro</span>
                     </div>
@@ -57,11 +57,12 @@
                 <div class="card text-center">
                     <div class="card-header">
                         <h5>Copa do Brasil</h5>
+                        <h5>20:30</h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Corinthians</span>
                         <img class="escudos" src="/src/img/Corinthians.png" alt="Corinthians">
-                        <span class="placar">3 - 0</span>
+                        <span class="placar"> - </span>
                         <img class="escudos" src="/src/img/Atletico Mineiro.png" alt="Atlético-MG">
                         <span class="mx-2">Atlético-MG</span>
                     </div>
@@ -71,14 +72,15 @@
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Libertadores</h5>
+                        <h5>09/05/2023 Libertadores 21:00</h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Fluminense</span>
                         <img class="escudos" src="/src/img/Fluminense.png" alt="Fluminense">
-                        <span class="placar">3 - 0</span>
+                        <span class="placar"> - </span>
                         <img class="escudos" src="/src/img/River Plate.png" alt="River Plate">
                         <span class="mx-2">River Plate</span>
+                        
                     </div>
                 </div>
             </div>
@@ -90,7 +92,7 @@
                     <div class="card-body">
                         <span class="mx-2">Fortaleza</span>
                         <img class="escudos" src="/src/img/Fortaleza.png" alt="Fortaleza">
-                        <span class="placar">3 - 3</span>
+                        <span class="placar"> - </span>
                         <img class="escudos" src="/src/img/San Lorenzo.png" alt="San Lorenzo">
                         <span class="mx-2">San Lorenzo</span>
                     </div>
