--- a/src/tabelaCDB.html
+++ b/src/tabelaCDB.html
@@ -62,52 +62,100 @@
         </div> 
         <div class="jogos">
             <h2>Copa do Brasil</h2>
-            <div>Chave 1</div>
-            <div class="jogo" id="chave-1">
-                <div class="jogo-ida">
-                    <div class="info">
-                        <div class="data">17/05/2023    21:30</div>
-                        <div class="local">Arena do Grêmio</div>
-                    </div>
-                    <div class="times">
-                        <div class="mandante">
-                            Grêmio
-                            <img src="img/escudos/Grêmio.png" alt="Grêmio">
-                        </div>
-                        <div class="placar">x</div>
-                        <div class="visitante">
-                            <img src="img/escudos/Cruzeiro.png" alt="Cruzeiro">
-                            Cruzeiro
-                        </div>
-                    </div>
-                </div>
-                <div class="jogo-volta">
-                    <div class="info">
-                        <div class="data">31/05/2023    16:00</div>
-                        <div class="local">Arena do Grêmio</div>
-                    </div>
-                    <div class="times">
-                        <div class="mandante">
-                            Cruzeiro
-                            <img src="img/escudos/Cruzeiro.png" alt="Cruzeiro">
-                        </div>
-                        <div class="placar">x</div>
-                        <div class="visitante">
-                            <img src="img/escudos/Grêmio.png" alt="Grêmio">
-                            Grêmio
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="jogo" id="chave-2"></div>
-            <div class="jogo" id="chave-3"></div>
-            <div class="jogo" id="chave-4"></div>
-            <div class="jogo" id="chave-5"></div>
-            <div class="jogo" id="chave-6"></div>
-            <div class="jogo" id="chave-7"></div>
-            <div class="jogo" id="chave-8"></div>
+            <div id="chaves-container"></div>
         </div>
     </div>
+
+    <script>
+        const apiKey = 'live_e207e278abab23740ec112e6b0485d'; // Replace with your actual API key
+        const endpoint = 'https://api.api-futebol.com.br/v1/campeonatos/2/fases/313';
+
+        function renderMatches(data, targetId) {
+            const container = document.getElementById(targetId);
+
+            data.chaves.forEach((chave, index) => {
+                const jogoDiv = document.createElement('div');
+                jogoDiv.classList.add('jogo');
+                jogoDiv.id = `chave-${index + 1}`;
+
+                const jogoIdaDiv = document.createElement('div');
+                jogoIdaDiv.classList.add('jogo-ida');
+
+                const jogoVoltaDiv = document.createElement('div');
+                jogoVoltaDiv.classList.add('jogo-volta');
+
+                const renderMatch = (partida) => {
+                    const infoDiv = document.createElement('div');
+                    infoDiv.classList.add('info');
+
+                    const dataDiv = document.createElement('div');
+                    dataDiv.classList.add('data');
+                    dataDiv.textContent = partida.data_realizacao && partida.hora_realizacao ? `${partida.data_realizacao} ${partida.hora_realizacao}` : 'A definir';
+                    infoDiv.appendChild(dataDiv);
+
+                    const localDiv = document.createElement('div');
+                    localDiv.classList.add('local');
+                    localDiv.textContent = partida.estadio ? partida.estadio.nome_popular : 'A definir';
+                    infoDiv.appendChild(localDiv);
+
+                    const timesDiv = document.createElement('div');
+                    timesDiv.classList.add('times');
+
+                    const mandanteDiv = document.createElement('div');
+                    mandanteDiv.classList.add('mandante');
+                    mandanteDiv.textContent = partida.time_mandante.nome_popular;
+
+                    const mandanteImg = document.createElement('img');
+                    mandanteImg.src = partida.time_mandante.escudo;
+                    mandanteImg.alt = partida.time_mandante.nome_popular;
+                    mandanteDiv.appendChild(mandanteImg);
+
+                    const placarDiv = document.createElement('div');
+                    placarDiv.classList.add('placar');
+                    placarMandante = partida.placar_mandante;
+                    placarVisitante = partida.placar_visitante;
+                    placarDiv.textContent = placarMandante && placarVisitante ? `${placarMandante} x ${placarVisitante}` : 'x';
+
+                    const visitanteDiv = document.createElement('div');
+                    visitanteDiv.classList.add('visitante');
+
+                    const visitanteImg = document.createElement('img');
+                    visitanteImg.src = partida.time_visitante.escudo;
+                    visitanteImg.alt = partida.time_visitante.nome_popular;
+                    visitanteDiv.appendChild(visitanteImg);
+
+                    visitanteDiv.insertAdjacentText('beforeend', partida.time_visitante.nome_popular);
+
+                    timesDiv.append(mandanteDiv, placarDiv, visitanteDiv);
+
+                    const matchDiv = document.createElement('div');
+                    matchDiv.appendChild(infoDiv);
+                    matchDiv.appendChild(timesDiv);
+
+                    return matchDiv;
+                };
+
+                jogoIdaDiv.appendChild(renderMatch(chave.partida_ida));
+                jogoVoltaDiv.appendChild(renderMatch(chave.partida_volta));
+
+                jogoDiv.append(jogoIdaDiv, jogoVoltaDiv);
+                container.appendChild(jogoDiv);
+            });
+        }
+
+        fetch(endpoint, {
+            headers: {
+                'Authorization': `Bearer ${apiKey}`
+            }
+        })
+        .then(response => response.json())
+        .then(data => {
+            renderMatches(data, 'chaves-container');
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+        });
+    </script>
 </body>
 
 </html>
