--- a/src/Calendario.html
+++ b/src/Calendario.html
@@ -42,12 +42,12 @@
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Brasileirão Série A 18:00</h5>
+                        <h5>Brasileirão Série A&emsp;&emsp; 18:00</h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Flamengo</span>
                         <img class="escudos" src="/src/img/flamengo.png" alt="Flamengo">
-                        <span class="placar">     X    </span>
+                        <span class="placar">&ensp;X&ensp;</span>
                         <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
                         <span class="mx-2">Cruzeiro</span>
                     </div>
@@ -56,13 +56,12 @@
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Copa do Brasil</h5>
-                        <h5>20:30</h5>
+                        <h5>Copa do Brasil<Br>20:30</Br></h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Corinthians</span>
                         <img class="escudos" src="/src/img/Corinthians.png" alt="Corinthians">
-                        <span class="placar"> - </span>
+                        <span class="placar">&ensp;-&ensp;</span>
                         <img class="escudos" src="/src/img/Atletico Mineiro.png" alt="Atlético-MG">
                         <span class="mx-2">Atlético-MG</span>
                     </div>
@@ -72,12 +71,12 @@
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>09/05/2023 Libertadores 21:00</h5>
+                        <h5> Libertadores </h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Fluminense</span>
                         <img class="escudos" src="/src/img/Fluminense.png" alt="Fluminense">
-                        <span class="placar"> - </span>
+                        <span class="placar">&ensp;-&ensp;</span>
                         <img class="escudos" src="/src/img/River Plate.png" alt="River Plate">
                         <span class="mx-2">River Plate</span>
                         
@@ -92,7 +91,7 @@
                     <div class="card-body">
                         <span class="mx-2">Fortaleza</span>
                         <img class="escudos" src="/src/img/Fortaleza.png" alt="Fortaleza">
-                        <span class="placar"> - </span>
+                        <span class="placar">&ensp;-&ensp;</span>
                         <img class="escudos" src="/src/img/San Lorenzo.png" alt="San Lorenzo">
                         <span class="mx-2">San Lorenzo</span>
                     </div>
