--- a/src/tabelaSerieA.html
+++ b/src/tabelaSerieA.html
@@ -24,7 +24,7 @@
                     <ul>
                         <li><a href="/src/index.html">Home</a></li>
                         <li><a href="/src/tabelaSerieA.html">Campeonatos</a></li>
-                        <li><a href="#">Calendário</a></li>
+                        <li><a href="/src/Calendario.html">Calendário</a></li>
                         <li><a href="#">Perfil</a></li>
                         <li><a href="#">Login</a></li>
                     </ul>
