--- a/src/tabelaCDB.html
+++ b/src/tabelaCDB.html
@@ -9,6 +9,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>FutScore</title>
 </head>
@@ -61,7 +62,11 @@
             </div>
         </div> 
         <div class="jogos">
-            <h2>Copa do Brasil</h2>
+            <div class="navegarGames">
+                <i class="ri-arrow-left-s-line"></i>
+                <h2>Oitavas de Final</h2>
+                <i class="ri-arrow-right-s-line"></i>
+            </div>
             <div id="chaves-container"></div>
         </div>
     </div>
