--- a/src/Calendario.html
+++ b/src/Calendario.html
@@ -9,6 +9,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     <title>FutScore</title>
@@ -34,8 +35,13 @@
         </nav>
     </header>
     
-    <div class="text-center">
-            <h2>Jogos de hoje</h2>
+    <div class="jogos">
+        <div class="navegarGames">
+            <i class="ri-arrow-left-s-line"></i>
+            <h2>Jogos de Hoje</h2>
+            <i class="ri-arrow-right-s-line"></i>
+        </div>
+        <div id="chaves-container"></div>
     </div>
     <div class="container">
         <div class="row m-0 gy-5 align-items-center">
@@ -56,7 +62,7 @@
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Copa do Brasil<Br>20:30</Br></h5>
+                        <h5>Copa do Brasil&emsp;&emsp; 20:00</h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Corinthians</span>
@@ -71,7 +77,7 @@
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5> Libertadores </h5>
+                        <h5> Libertadores&emsp;&emsp; 21:30 </h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Fluminense</span>
@@ -86,7 +92,7 @@
             <div class="col-sm-12 col-md-6">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h5>Sul Americana</h5>
+                        <h5>Sul Americana&emsp;&emsp; 22:30</h5>
                     </div>
                     <div class="card-body">
                         <span class="mx-2">Fortaleza</span>
