--- a/src/Calendario.html
+++ b/src/Calendario.html
@@ -35,11 +35,14 @@
         </nav>
     </header>
     
-    <div class="jogos">
-        <div class="navegarGames">
-            <i class="ri-arrow-left-s-line"></i>
-            <h2>Jogos de Hoje</h2>
-            <i class="ri-arrow-right-s-line"></i>
+    
+    <div class="container">
+        <div class="jogos">
+            <div class="navegarGames">
+                <i class="ri-arrow-left-s-line"></i>
+                <h2>Jogos de Hoje</h2>
+                <i class="ri-arrow-right-s-line"></i>
+            </div>   
         </div>
         <div id="chaves-container"></div>
     </div>
