--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,10 @@
         <h2>Campeonatos</h2>
         <div class="campeonatos">
             <div>
-                <img src="/src/img/brasileirao.png" alt="brasileirao">
-                <h5>Brasileirão Série A</h5>
+                <a href="/src/tabelaSerieA.html">
+                    <img src="/src/img/brasileirao.png" alt="brasileirao">
+                    <h5>Brasileirão Série A</h5>
+                </a>
             </div>
             <div>
                 <img src="/src/img/Campeonato_Brasileiro_Série_B.png" alt="Série_B">
@@ -50,8 +52,10 @@
                 
             </div>
             <div>
-                <img src="/src/img/copa-do-brasil.png" alt="copa do brasil">
-                <h5>Copa do Brasil</h5>
+                <a href="/src/tabelaCDB.html">
+                    <img src="/src/img/copa-do-brasil.png" alt="copa do brasil">
+                    <h5>Copa do Brasil</h5>
+                </a>
             </div>
             <div>
                 <img src="/src/img/libert.png" alt="Libertadores">
