--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -28,12 +28,13 @@
         </div>
     </div>
 </nav>
+
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2 profile-sidebar">
-                <img class="profile-photo" src="profile_photo." alt="Profile Photo">
-                <div class="profile-name">Nome do Usuário</div>
+                <img class="profile-photo" src="img/Profile Photo.png" alt="Profile Photo">
+                <div class="profile-name">Gabriel Almeida</div>
                 <ul class="profile-menu">
                     <li class="profile-menu-item">Configurações</li>
                 </ul>
@@ -41,85 +42,68 @@
             <div class="col-md-9">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <img class="time-do-coração" src="img/cruzeiro.png" alt="Cruzeiro">
+                        <img class="escudos" src="img/cruzeiro.png" alt="Cruzeiro">
                         <h3 class="align-items-center">Meu time do coração</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-5">
                         <h4>Últimos Resultados</h4>
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <div class="card-body">
-                                    <span class="mx-2">Flamengo</span>
-                                    <img class="escudos" src="/src/img/flamengo.png" alt="Flamengo">
-                                    <span class="placar">1 - 4</span>
-                                    <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
-                                    <span class="mx-2">Cruzeiro</span>
-                                </div>
-                                <p> Brasileirão - 2°rodada </p>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="card-body">
-                                    <span class="mx-2">Grêmio</span>
-                                    <img class="escudos" src="img/escudos/Grêmio.png" alt="Grêmio">
-                                    <span class="placar">2 - 3</span>
-                                    <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
-                                    <span class="mx-2">Cruzeiro</span>
-                                </div>
-                                <p> Copa do Brasil - Oitavas de final</p>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="card-body">
-                                    <span class="mx-2">Corinthians</span>
-                                    <img class="escudos" src="/src/img/Corinthians.png" alt="Flamengo">
-                                    <span class="placar">2 - 2</span>
-                                    <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
-                                    <span class="mx-2">Cruzeiro</span>
-                                </div>
-                                <p> Brasileirão - 1° rodada </p>
-                            </li>
-                        </ul>
+                        <div class="card-body">
+                            <span class="mx-2">Flamengo</span>
+                            <img class="escudos" src="/src/img/flamengo.png" alt="Flamengo">
+                            <span class="placar">1 - 4</span>
+                            <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
+                            <span class="mx-2">Cruzeiro</span>
+                        </div>
+                        <p> Brasileirão - 2°rodada </p>
+                        <div class="card-body">
+                            <span class="mx-2">Grêmio</span>
+                            <img class="escudos" src="img/escudos/Grêmio.png" alt="Grêmio">
+                            <span class="placar">2 - 3</span>
+                            <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
+                            <span class="mx-2">Cruzeiro</span>
+                        </div>
+                        <p> Copa do Brasil - Oitavas de final</p>
+                        <div class="card-body">
+                            <span class="mx-2">Corinthians</span>
+                            <img class="escudos" src="/src/img/Corinthians.png" alt="Flamengo">
+                            <span class="placar">2 - 2</span>
+                            <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
+                            <span class="mx-2">Cruzeiro</span>
+                        </div>
+                        <p> Brasileirão - 1° rodada </p>
                     </div>
                     <div class="col-md-3">
                         <h4>Classificação</h4>
-                        <ul class="list-group">
-                            <li class="list-group-item">Brasileirão</li>
-                            <li class="list-group-item">Posição 2</li>
-                            <li class="list-group-item">Posição 3</li>
-                        </ul>
+                        <p>Brasileirão</p>
+                        <p>Posição 2</p>
+                        <p>Posição 3</p>
                     </div>
-                    <div class="col-md-4 text-center>
-                        <h4>Próximos Jogos</h4>
-                        <ul class="list-group" style="align-content: center;">
-                            <li class="list-group-item">
-                                <div class="card-body">
-                                    <span class="mx-2">Goiás</span>
-                                    <img class="escudos" src="/src/img/escudos/Goiás.png" alt="Goiás">
-                                    <span class="placar"> X </span>
-                                    <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
-                                    <span class="mx-2">Cruzeiro</span>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="card-body">
-                                    <span class="mx-2">Vasco</span>
-                                    <img class="escudos" src="img/escudos/Vasco.png" alt="Vasco">
-                                    <span class="placar"> X </span>
-                                    <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
-                                    <span class="mx-2">Cruzeiro</span>
-                                </div>   
-                            </li>
-                            <li class="list-group-item">
-                                <div class="card-body">
-                                    <span class="mx-2">Fluminense</span>
-                                    <img class="escudos" src="img/escudos/Fluminense.png" alt="Fluminense">
-                                    <span class="placar"> X </span>
-                                    <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
-                                    <span class="mx-2">Cruzeiro</span>
-                                </div>
-                            </li>
-                        </ul>
+                        <div class="col-md-4">
+                            <h4>Próximos Jogos</h4>
+                            <div class="card-body">
+                                <span class="mx-2">Goiás</span>
+                                <img class="escudos" src="/src/img/escudos/Goiás.png" alt="Goiás">
+                                <span class="placar"> X </span>
+                                <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
+                                <span class="mx-2">Cruzeiro</span>
+                            </div>
+                            <div class="card-body">
+                                <span class="mx-2">Vasco</span>
+                                <img class="escudos" src="img/escudos/Vasco.png" alt="Vasco">
+                                <span class="placar"> X </span>
+                                <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
+                                <span class="mx-2">Cruzeiro</span>
+                            </div>
+                            <div class="card-body">
+                                <span class="mx-2">Fluminense</span>
+                                <img class="escudos" src="img/escudos/Fluminense.png" alt="Fluminense">
+                                <span class="placar"> X </span>
+                                <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
+                                <span class="mx-2">Cruzeiro</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -128,4 +112,3 @@
 </body>
 
 </html>
-
