--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -78,8 +78,9 @@
                         <h4>Classificação</h4>
                         <p><div>
                             <a href="/src/tabelaSerieA.html">
-                                <img src="/src/img/brasileirao.png" alt="brasileirao">
+                                <img src="/src/img/Brasileirão perfil.png" alt="brasileirao">
                                 <h5>Brasileirão Série A</h5>
+                                <h4>4° colocado</h4>
                             </a>
                         </div></p>
                         <p>Posição 2</p>
