--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -56,7 +56,7 @@
                             <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
                             <span class="mx-2">Cruzeiro</span>
                         </div>
-                       <p> Brasileirão - 2°rodada </p>
+                        <p> Brasileirão - 2°rodada </p>
                         <div class="card-body">
                             <span class="mx-2">Grêmio</span>
                             <img class="escudos" src="img/escudos/Grêmio.png" alt="Grêmio">
@@ -76,13 +76,7 @@
                     </div>
                     <div class="col-md-3">
                         <h4>Classificação</h4>
-                        <p><div>
-                            <a href="/src/tabelaSerieA.html">
-                                <img src="/src/img/Brasileirão perfil.png" alt="brasileirao">
-                                <h5>Brasileirão Série A</h5>
-                                <h4>4° colocado</h4>
-                            </a>
-                        </div></p>
+                        <p>Brasileirão</p>
                         <p>Posição 2</p>
                         <p>Posição 3</p>
                     </div>
