--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-5">
-                        <h4>Últimos Resultados</h4>
+                        <h3 class="text-center"> Últimos resultados</h3>
                         <div class="card-body">
                             <span class="mx-2">Flamengo</span>
                             <img class="escudos" src="/src/img/flamengo.png" alt="Flamengo">
@@ -56,7 +56,7 @@
                             <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
                             <span class="mx-2">Cruzeiro</span>
                         </div>
-                       <p> Brasileirão - 2°rodada </p>
+                        <h5 class="text-center"> Brasileirão - 2°rodada</h5>
                         <div class="card-body">
                             <span class="mx-2">Grêmio</span>
                             <img class="escudos" src="img/escudos/Grêmio.png" alt="Grêmio">
@@ -64,7 +64,7 @@
                             <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
                             <span class="mx-2">Cruzeiro</span>
                         </div>
-                        <p> Copa do Brasil - Oitavas de final</p>
+                        <h5 class="text-center">Copa do Brasil</h5>
                         <div class="card-body">
                             <span class="mx-2">Corinthians</span>
                             <img class="escudos" src="/src/img/Corinthians.png" alt="Flamengo">
@@ -72,48 +72,57 @@
                             <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
                             <span class="mx-2">Cruzeiro</span>
                         </div>
-                        <p> Brasileirão - 1° rodada </p>
+                        <h5 class="text-center">Brasileirão - 1° rodada</h5>
                     </div>
-                    <div class="col-md-3">
-                        <h4>Classificação</h4>
-                        <p><div>
+                    <div class="col-md-2">
+                        <h3 class="text-center"> Classificação </h3>
+                        <div>
                             <a href="/src/tabelaSerieA.html">
                                 <img src="/src/img/Brasileirão perfil.png" alt="brasileirao">
-                                <h5>Brasileirão Série A</h5>
-                                <h4>4° colocado</h4>
+                                <h5 class="text-center"> Brasileirão - 2°rodada</h5>
+                                <h5 class="text-center"> 4° colocado</h5>
                             </a>
-                        </div></p>
-                        <p>Posição 2</p>
+                        </div>
+                        <div>
+                        <a href="/src/img/conmebol-sul-americana.html">
+                            <img src="/src/img/conmebol-sul-americana.png" alt="conmebol-sul-americana">
+                            <h5>Sul Americana</h5>
+                            <h5 class="text-center"> Oitavas de final</h5>
+                        </a>
+                        </div>
                         <p>Posição 3</p>
                     </div>
-                        <div class="col-md-4">
-                            <h4>Próximos Jogos</h4>
-                            <div class="card-body">
-                                <span class="mx-2">Goiás</span>
-                                <img class="escudos" src="/src/img/escudos/Goiás.png" alt="Goiás">
-                                <span class="placar"> X </span>
-                                <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
-                                <span class="mx-2">Cruzeiro</span>
-                            </div>
-                            <div class="card-body">
-                                <span class="mx-2">Vasco</span>
-                                <img class="escudos" src="img/escudos/Vasco.png" alt="Vasco">
-                                <span class="placar"> X </span>
-                                <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
-                                <span class="mx-2">Cruzeiro</span>
-                            </div>
-                            <div class="card-body">
-                                <span class="mx-2">Fluminense</span>
-                                <img class="escudos" src="img/escudos/Fluminense.png" alt="Fluminense">
-                                <span class="placar"> X </span>
-                                <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
-                                <span class="mx-2">Cruzeiro</span>
-                            </div>
+                    <div class="col-md-5">
+                        <h3 class="text-center"> Próximos jogos</h3>
+                        <div class="card-body">
+                            <span class="mx-2">Botafogo</span>
+                            <img class="escudos" src="/src/img/escudos/Botafogo.png" alt="Botafogo">
+                            <span class="placar"> X </span>
+                            <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
+                            <span class="mx-2">Cruzeiro</span>
                         </div>
+                        <h5 class="text-center"> Brasileirão - 4°rodada</h5>
+                        <div class="card-body">
+                            <span class="mx-2">Grêmio</span>
+                            <img class="escudos" src="img/escudos/Grêmio.png" alt="Grêmio">
+                            <span class="placar"> X </span>
+                            <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
+                            <span class="mx-2">Cruzeiro</span>
+                        </div>
+                        <h5 class="text-center"> Copa do Brasil - 2° Jogo</h5>
+                        <div class="card-body">
+                            <span class="mx-2">Fluminense</span>
+                            <img class="escudos" src="img/escudos/Fluminense.png" alt="Fluminense">
+                            <span class="placar"> X </span>
+                            <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
+                            <span class="mx-2">Cruzeiro</span>
+                        </div>
+                        <h5 class="text-center"> Brasileirão - 5°rodada</h5>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
