--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -56,7 +56,7 @@
                             <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
                             <span class="mx-2">Cruzeiro</span>
                         </div>
-                       <p> Brasileirão - 2°rodada </p>
+                        <h5 class="text-center">Brasileirão - 2° rodada</h5>
                         <div class="card-body">
                             <span class="mx-2">Grêmio</span>
                             <img class="escudos" src="img/escudos/Grêmio.png" alt="Grêmio">
@@ -75,7 +75,7 @@
                         <h5 class="text-center">Brasileirão - 1° rodada</h5>
                     </div>
                     <div class="col-md-3">
-                        <h4>Classificação</h4>
+                        <h3>Classificação</h3>
                         <p><div>
                             <a href="/src/tabelaSerieA.html">
                                 <img src="/src/img/Brasileirão perfil.png" alt="brasileirao">
@@ -86,7 +86,7 @@
                         <p>Posição 2</p>
                         <p>Posição 3</p>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-4">
                         <h3 class="text-center"> Próximos jogos</h3>
                         <div class="card-body">
                             <span class="mx-2">Botafogo</span>
