--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -76,13 +76,13 @@
                     </div>
                     <div class="col-md-3">
                         <h3>Classificação</h3>
-                        <p><div>
+                        <div>
                             <a href="/src/tabelaSerieA.html">
                                 <img src="/src/img/Brasileirão perfil.png" alt="brasileirao">
-                                <h5>Brasileirão Série A</h5>
-                                <h4>4° colocado</h4>
+                                <h5>&emsp;&emsp;&emsp;&emsp;Brasileirão Série A</h5>
+                                <h4>&emsp;&emsp;&emsp;&emsp;4° colocado</h4>
                             </a>
-                        </div></p>
+                        </div>
                         <p>Posição 2</p>
                         <p>Posição 3</p>
                     </div>
