--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -55,7 +55,7 @@
                     </div>
                     <h5 class="text-center">Brasileirão - 2° rodada</h5>
                     <div class="card-body">
-                        <span class="mx-2">Grêmio</span>
+                        <span class="mx-2">&emsp;&emsp;Grêmio</span>
                         <img class="escudos" src="img/escudos/Grêmio.png" alt="Grêmio">
                         <span class="placar">2 - 3</span>
                         <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
@@ -71,7 +71,7 @@
                     </div>
                     <h5 class="text-center">Brasileirão - 1° rodada</h5>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <h3>Classificação</h3>
                     <div class="imgBR">
                         <a href="/src/tabelaSerieA.html">
@@ -81,10 +81,10 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <h3 class="text-center"> Próximos jogos</h3>
                     <div class="card-body">
-                        <span class="mx-2">Botafogo</span>
+                        <span class="mx-2">&emsp;Botafogo</span>
                         <img class="escudos" src="/src/img/escudos/Botafogo.png" alt="Botafogo">
                         <span class="placar"> X </span>
                         <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
@@ -92,7 +92,7 @@
                     </div>
                     <h5 class="text-center"> Brasileirão - 4°rodada</h5>
                     <div class="card-body">
-                        <span class="mx-2">Grêmio</span>
+                        <span class="mx-2">&emsp;&emsp;Grêmio</span>
                         <img class="escudos" src="img/escudos/Grêmio.png" alt="Grêmio">
                         <span class="placar"> X </span>
                         <img class="escudos" src="/src/img/cruzeiro.png" alt="Cruzeiro">
